@@ -1,7 +1,7 @@
-# $Id: Makefile.PL 7623 2005-10-19 13:19:19Z wsnyder $
+# $Id: Makefile.PL 17052 2006-03-30 15:30:47Z wsnyder $
 # DESCRIPTION: Perl ExtUtils: Type 'perl Makefile.PL' to create a Makefile for this package
 #
-# Copyright 2003-2005 by Wilson Snyder.  This program is free software;
+# Copyright 2003-2006 by Wilson Snyder.  This program is free software;
 # you can redistribute it and/or modify it under the terms of either the GNU
 # Lesser General Public License or the Perl Artistic License.
 ######################################################################
