@@ -2,6 +2,12 @@ Revision history for Perl extension Parallel::Forker
 
 The contributors that suggested a given feature are shown in [].
 	
+* Parallel::Forker 1.201 2006/03/30
+
+***	Add last-run PID number to write_tree output file.  [Jeff Dutton]
+
+***	Fix poll() setting activity with no runnable processes. [Jeff Dutton]
+
 * Parallel::Forker 1.200 2005/10/19
 
 **	First public release.
@@ -15,12 +21,12 @@ The contributors that suggested a given feature are shown in [].
 **	First created
 
 ----------------------------------------------------------------------
-$Id: Changes 7623 2005-10-19 13:19:19Z wsnyder $
+$Id: Changes 17052 2006-03-30 15:30:47Z wsnyder $
 ----------------------------------------------------------------------
 
 This uses outline mode in Emacs.  See C-h m [M-x describe-mode].
 
-Copyright 2003-2005 by Wilson Snyder.  This program is free software;
+Copyright 2003-2006 by Wilson Snyder.  This program is free software;
 you can redistribute it and/or modify it under the terms of either the GNU
 Lesser General Public License or the Perl Artistic License.
 
